@@ -183,11 +183,18 @@ handleHistoricalSubstackRequest(). Exactly which requests get handled by which f
 	QList<RCommandProxy*> current_commands_to_cancel;
 	bool too_late_to_interrupt;
 	void interruptCommand (int command_id);
+
+/** check stdout and stderr for new output (from sub-processes). Since this function is called from both threads, it is protected by a mutex.
+ *  @param forcibly: if false, and the other thread currently has a lock on the mutex, do nothing, and return false.
+ *  @returns: true, if output was actually fetched (or no output was available), false, if the function gave up on a locked mutex. */
+	bool fetchStdoutStderr (bool forcibly, bool allow_blocking);
 private:
 	void clearPendingInterrupt ();
 protected:
 	RCommandProxy* handleRequest (RBackendRequest *request, bool mayHandleSubstack);
 private:
+	QMutex stdout_stderr_mutex;
+	int stdout_stderr_fd;
 /** set up R standard callbacks */
 	void setupCallbacks ();
 /** connect R standard callbacks */
