@@ -1,4 +1,5 @@
-- Simplify code produced by several plugins 											# TODO: convert remaining uses of substitute()
+- Simplify internal handling of system() and system2() output					TODO: test on Windows!
+- Simplify code produced by several plugins
 - Fixed: Occasional duplication of first letter of keyword, when using "Copy lines to output" from the console window
 
 --- Version 0.5.6 - May-30-2011
